--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
     "jest": "^28.1.0",
+    "nodemon": "^3.0.1",
     "supertest": "^6.2.3"
   },
   "repository": {
@@ -19,6 +20,7 @@
     "url": "git+https://github.com/BloomInstituteOfTechnology/node-api1-project.git"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "nanoid": "^3.3.4"
   }
 }
